project converted to Spring boot, enable actuators and implemented different environments which are local, stg, dev, prod